--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -235,7 +235,6 @@
     <Compile Include="Areas\Sistema\Controllers\MaquinaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\PlantioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\SementeController.cs" />
-    <Compile Include="Areas\Sistema\Controllers\VwItemsController.cs" />
     <Compile Include="Areas\Sistema\Models\Administrativo\Area.cs" />
     <Compile Include="Areas\Sistema\Models\Administrativo\Cliente.cs" />
     <Compile Include="Areas\Sistema\Models\Armazenamento\Insumo.cs" />
@@ -272,11 +271,23 @@
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewFuncionario.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewFinanceiro.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewManutencao.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewsBanco\VwCompra.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewsBanco\VwFluxoDeCaixa.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewsBanco\VwSaida.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewsBanco\VwSaldo.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewsBanco\VwVenda.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Estoque\VwControle.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Estoque\VwManutencao.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Estoque\VwPragaOrDoenca.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Estoque\VwQtdMa.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Financeiro\VwCompra.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Pessoa\VwEndereco.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Financeiro\VwFluxoDeCaixa.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Pessoa\VwFornecedor.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Pessoa\VwFuncionario.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Estoque\VwItems.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Pessoa\VwPessoa.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Pessoa\VwPessoaFisica.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Pessoa\VwPessoaJuridica.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Financeiro\VwSaida.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Financeiro\VwSaldo.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Pessoa\VwTelefone.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewsBanco\Financeiro\VwVenda.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\AreaPlantioRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\AreaRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\FornecedorRepository.cs" />
@@ -286,7 +297,6 @@
     <Compile Include="Areas\Sistema\Models\zRepositories\PlantioRepository.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewEstoque.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewPlantio.cs" />
-    <Compile Include="Areas\Sistema\Models\ViewsBanco\VwItems.cs" />
     <Compile Include="Areas\Sistema\Models\Financas\Compra.cs" />
     <Compile Include="Areas\Sistema\Models\Ferramentas\Manutencao.cs" />
     <Compile Include="Areas\Sistema\Models\Ferramentas\Maquina.cs" />
