Arrumados alguns erros no controller da Compra e feito o DespesaAdm

--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Areas\Ecommerce\Models\VendaAnuncio.cs" />
     <Compile Include="Areas\Ecommerce\Models\Wishlist.cs" />
     <Compile Include="Areas\Sistema\Controllers\CompraController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\ContaADMController.cs" />
     <Compile Include="Areas\Sistema\Controllers\DespesaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\EstoqueController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FinanceiroController.cs" />
@@ -291,6 +292,7 @@
     <Compile Include="Areas\Sistema\Models\ViewsBanco\Financeiro\VwVenda.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\AreaPlantioRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\AreaRepository.cs" />
+    <Compile Include="Areas\Sistema\Models\zRepositories\DespesaAdmRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\FornecedorRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\ItensCompradosRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\ItensPlantioRepository.cs" />
@@ -458,6 +460,11 @@
     <Content Include="Areas\Sistema\Views\Despesa\Editar.cshtml" />
     <Content Include="Areas\Sistema\Views\Despesa\Detalhes.cshtml" />
     <Content Include="Areas\Sistema\Views\Despesa\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaADM\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaADM\Editar.cshtml" />
+    <Content Include="Areas\Sistema\Views\Compra\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaADM\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaADM\Excluir.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -537,9 +544,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Ecommerce\Views\Shared\" />
-    <Folder Include="Areas\Sistema\Views\Conta\Administrador\" />
-    <Folder Include="Areas\Sistema\Views\Conta\Funcionario\" />
     <Folder Include="Areas\Sistema\Views\Controles\" />
+    <Folder Include="Areas\Sistema\Views\DespesaAdm\" />
     <Folder Include="Areas\Sistema\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
