--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Areas\Ecommerce\Models\Wishlist.cs" />
     <Compile Include="Areas\Sistema\Controllers\CompraController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ContaADMController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\ContaFUNCController.cs" />
     <Compile Include="Areas\Sistema\Controllers\DespesaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\EstoqueController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FinanceiroController.cs" />
@@ -293,6 +294,7 @@
     <Compile Include="Areas\Sistema\Models\zRepositories\AreaPlantioRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\AreaRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\DespesaAdmRepository.cs" />
+    <Compile Include="Areas\Sistema\Models\zRepositories\DespesaFuncRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\FornecedorRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\ItensCompradosRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\ItensPlantioRepository.cs" />
@@ -465,6 +467,10 @@
     <Content Include="Areas\Sistema\Views\Compra\Detalhes.cshtml" />
     <Content Include="Areas\Sistema\Views\ContaADM\Detalhes.cshtml" />
     <Content Include="Areas\Sistema\Views\ContaADM\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaFUNC\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaFUNC\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaFUNC\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\ContaFUNC\Editar.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -545,7 +551,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Ecommerce\Views\Shared\" />
     <Folder Include="Areas\Sistema\Views\Controles\" />
-    <Folder Include="Areas\Sistema\Views\DespesaAdm\" />
     <Folder Include="Areas\Sistema\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
