--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Areas\Ecommerce\Models\Pedido.cs" />
     <Compile Include="Areas\Ecommerce\Models\VendaAnuncio.cs" />
     <Compile Include="Areas\Ecommerce\Models\Wishlist.cs" />
+    <Compile Include="Areas\Sistema\Controllers\AreaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\CompraController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ContaADMController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ContaFUNCController.cs" />
@@ -238,6 +239,7 @@
     <Compile Include="Areas\Sistema\Controllers\MaquinaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\PlantioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\SementeController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\SoloController.cs" />
     <Compile Include="Areas\Sistema\Models\Administrativo\Area.cs" />
     <Compile Include="Areas\Sistema\Models\Administrativo\Cliente.cs" />
     <Compile Include="Areas\Sistema\Models\Armazenamento\Insumo.cs" />
@@ -267,6 +269,7 @@
     <Compile Include="Areas\Sistema\Models\Safras\Plantio.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\CreateCompraViewModel.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\CreatePlantioViewModel.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewModels\ViewAreas.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewCompra.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewMaquina.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewPragaDoenca.cs" />
@@ -295,7 +298,6 @@
     <Compile Include="Areas\Sistema\Models\zRepositories\AreaRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\DespesaAdmRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\DespesaFuncRepository.cs" />
-    <Compile Include="Areas\Sistema\Models\zRepositories\FornecedorRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\ItensCompradosRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\ItensPlantioRepository.cs" />
     <Compile Include="Areas\Sistema\Models\zRepositories\MaquinaManutencaoRepository.cs" />
@@ -471,6 +473,15 @@
     <Content Include="Areas\Sistema\Views\ContaFUNC\Detalhes.cshtml" />
     <Content Include="Areas\Sistema\Views\ContaFUNC\Excluir.cshtml" />
     <Content Include="Areas\Sistema\Views\ContaFUNC\Editar.cshtml" />
+    <Content Include="Areas\Sistema\Views\Area\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Area\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Area\Editar.cshtml" />
+    <Content Include="Areas\Sistema\Views\Area\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\Area\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\Solo\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Solo\Editar.cshtml" />
+    <Content Include="Areas\Sistema\Views\Solo\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\Solo\Excluir.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
