--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -268,6 +268,8 @@
     <Compile Include="Areas\Sistema\Models\Safras\ItensPlantio.cs" />
     <Compile Include="Areas\Sistema\Models\Safras\Plantio.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\CreateCompraViewModel.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewModels\CreateFornecedorViewModel.cs" />
+    <Compile Include="Areas\Sistema\Models\ViewModels\CreateFuncionarioViewModel.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\CreatePlantioViewModel.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewAreas.cs" />
     <Compile Include="Areas\Sistema\Models\ViewModels\ViewCompra.cs" />
@@ -316,6 +318,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DecimalModelBinder.cs" />
     <Compile Include="Models\Financeiro\DadosBancario.cs" />
     <Compile Include="Models\Pessoa\PessoaFisica.cs" />
     <Compile Include="Models\Pessoa\PessoaJuridica.cs" />
@@ -482,6 +485,10 @@
     <Content Include="Areas\Sistema\Views\Solo\Editar.cshtml" />
     <Content Include="Areas\Sistema\Views\Solo\Detalhes.cshtml" />
     <Content Include="Areas\Sistema\Views\Solo\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\Fornecedor\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Semente\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Semente\Editar.cshtml" />
+    <Content Include="Areas\Sistema\Views\Semente\Excluir.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
