--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -399,6 +399,7 @@
     <Content Include="Content\themes\base\tooltip.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\materialdesignicons-webfont.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Imagens\admin.jpg" />
@@ -508,6 +509,35 @@
     <Content Include="Areas\Sistema\Views\Estoque\Excluir.cshtml" />
     <Content Include="Areas\Sistema\Views\Venda\Create.cshtml" />
     <Content Include="Areas\Sistema\Views\Venda\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\PragaDoenca\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\Maquina\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Excluir.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Editar.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\Fornecedor\Detalhes.cshtml" />
+    <Content Include="Areas\Sistema\Views\Semente\Detalhes.cshtml" />
+    <Content Include="fonts\DubaiW23-Bold.eot" />
+    <Content Include="fonts\DubaiW23-Bold.ttf" />
+    <Content Include="fonts\DubaiW23-Bold.woff" />
+    <Content Include="fonts\DubaiW23-Bold.woff2" />
+    <Content Include="fonts\DubaiW23-Light.eot" />
+    <Content Include="fonts\DubaiW23-Light.ttf" />
+    <Content Include="fonts\DubaiW23-Light.woff" />
+    <Content Include="fonts\DubaiW23-Light.woff2" />
+    <Content Include="fonts\DubaiW23-Medium.eot" />
+    <Content Include="fonts\DubaiW23-Medium.ttf" />
+    <Content Include="fonts\DubaiW23-Medium.woff" />
+    <Content Include="fonts\DubaiW23-Medium.woff2" />
+    <Content Include="fonts\DubaiW23-Regular.eot" />
+    <Content Include="fonts\DubaiW23-Regular.ttf" />
+    <Content Include="fonts\DubaiW23-Regular.woff" />
+    <Content Include="fonts\DubaiW23-Regular.woff2" />
+    <Content Include="fonts\materialdesignicons-webfont.eot" />
+    <Content Include="fonts\materialdesignicons-webfont.ttf" />
+    <Content Include="fonts\materialdesignicons-webfont.woff" />
+    <Content Include="fonts\materialdesignicons-webfont.woff2" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
